metadata/force-app/main/default/objects/CustomName_PrJKf__c/CustomName_PrJKf__c.object-meta.xml
<CustomObject>
    <description>Description_YLwCj</description>
    <label>CustomLabel_vhaAK</label>
    <nameField>
        <label>CustomLabel_vhaAK</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_vhaAKs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>