metadata/force-app/main/default/objects/CustomName_PrJKf__c/fields/CustomField_inwRz__c.field-meta.xml
<CustomField>
    <fullName>CustomField_inwRz__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldqxgob</label>
    <length>255</length>
    <type>Text</type>
</CustomField>